--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -3,7 +3,7 @@ version: "3.5"
 services:
   redis:
     image: redis:6
-    container_name: crmebpro_redis
+    container_name: ${PROJECT_NAME}_redis
     restart: unless-stopped
     # Set maxmemory and policy, feel free to adjust
     command: "redis-server --maxmemory 1024mb --maxmemory-policy allkeys-lru"
@@ -13,17 +13,18 @@ services:
       - service
 
   mysql:
-    image: mysql:5.7 # https://hub.docker.com/_/mysql/ - or mariadb https://hub.docker.com/_/mariadb
-    container_name: crmebpro_mysql
-    expose:
-      - 3306
+    image: mysql:8 # https://hub.docker.com/_/mysql/ - or mariadb https://hub.docker.com/_/mariadb
+    container_name: ${PROJECT_NAME}_mysql
+    ports:
+      - 3306:3306
     networks:
       - database
     command:
       [
         '--default_authentication_plugin=mysql_native_password',
         '--character-set-server=utf8mb4',
-        '--collation-server=utf8mb4_unicode_ci'
+        '--collation-server=utf8mb4_unicode_ci',
+        '--sql-mode=NO_ENGINE_SUBSTITUTION'
       ]
     volumes:
       - ./mysql/conf:/etc/mysql/conf.d
@@ -31,14 +32,15 @@ services:
     security_opt:
       - seccomp:unconfined
     environment:
-      MYSQL_DATABASE: "crmeb"
-      MYSQL_USER: "crmeb"
-      MYSQL_PASSWORD: "crmeb"
-      MYSQL_ROOT_PASSWORD: "crmeb"
+      MYSQL_DATABASE: $DB_DATABASE
+      MYSQL_USER: $DB_USERNAME
+      MYSQL_PASSWORD: $DB_USERPASS
+      MYSQL_ROOT_PASSWORD: $DB_ROOTPASS
+    profiles: [ "dev" ]
     restart: unless-stopped
 
   php-fpm:
-    container_name: crmebpro_php
+    container_name: ${PROJECT_NAME}_php
     build: ./php
     restart: unless-stopped
     environment:
@@ -63,11 +65,11 @@ services:
       - database
 
   nginx:
-    container_name: crmebpro_nginx
+    container_name: ${PROJECT_NAME}_nginx
     image: nginx
     restart: unless-stopped
     ports:
-      - 28138:80
+      - ${CRMEB_PORT}:80
     depends_on:
       - php-fpm
     environment:
@@ -84,19 +86,20 @@ services:
       - application
 
   pma:
-    container_name: crmebpro_pma
+    container_name: ${PROJECT_NAME}_pma
     image: phpmyadmin/phpmyadmin
     restart: "no"
     ports:
-      - 28139:80
+      - ${PMA_PORT}:80
     networks:
       - database
     environment:
-      PMA_HOST: mysql
-      PMA_PORT: 3306
+      PMA_HOST: $DB_HOST
+      PMA_PORT: $DB_PORT
       PMA_USER: root
-      PMA_PASSWORD: crmeb
+      PMA_PASSWORD: $DB_USERPASS
       UPLOAD_LIMIT: 1024M
+    profiles: [ "dev" ]
 
 networks:
   application:
